# scroll-snap

./: .gitignore  README.md  index.html  package.json  tsconfig.node.tsbuildinfo
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  lib.rs  main.rs  stitch.rs  utils.rs
src/components/: Editor.tsx  Overlay.tsx
src/store/: index.ts
